# CAGD-Modeling-Software

./: .gitignore  Bernstein.cpp  Bernstein.h  Bezier_Operations.h  Bezier_Surface.cpp  Bezier_Surface.h  CADG.sln  CADG.vcxproj  CAGD.sln  CAGD.vcxproj  CMakeLists.txt  CurveBezier.cpp  CurveBezierTest.cpp  DeCasteljau.cpp  GLSLProgram.cpp  Gui.cpp  ObjFileParser.cpp  ObjectLOG.txt  PointVector.cpp  PolyObject.cpp  README.md  ViewPanel.cpp  main.cpp  main.h  mainNonIndexed.cpp
assets/: gui.html
enc_temp_folder/5ed96fd37b59f3dbf38cf3d59d83bf/: Gui.cpp
enc_temp_folder/f247f33dd55c4a8678b7487631c71d5/: Bezier_Surface.cpp
header/: Bernstein.h  Bezier_Operations.h  Bezier_Surface.h  Colors.h  CurveBezier.h  CurveBezierTest.h  DeCasteljau.h  GlobalConstants.h  GlobalFunctions.h  Gui.h  ObjFileParser.h  ObjParser.h  PointVector.h  PolyObject.h  ViewPanel.h
include/: GLSLProgram.h  GLTools.h
libs/freeglut/: VERSION.txt
libs/freeglut/lib/vs2015_x64/Debugn/: freeglut_staticd.lib  freeglutd.exp  freeglutd.lib
libs/freeglut/lib/vs2015_x64/RelWithDebInfo/: freeglut.exp  freeglut.lib  freeglut_static.lib
libs/glew/: VERSION.txt
libs/glm/: VERSION.txt
shader/: shaded.frag  shaded.vert  shadedGouraud.vert  shadedPhong.frag  shadedPhong.vert  simple.frag
